Bug 170969,104934,171228,170707 #ifdef MOZ_UNICODE fix Affect in //widget/src/windows only /r=shanjian;/sr=kin;/a=asa