widget/src/windows/nsWindowAPI.h
@@ -38,9 +38,14 @@
 #ifndef WindowAPI_h__
 #define WindowAPI_h__
 
+#include <windows.h>
+#include <commdlg.h>
+#include <shlobj.h>
+
 typedef LRESULT (WINAPI *NS_DefWindowProc) (HWND, UINT, WPARAM, LPARAM);
 typedef LRESULT (WINAPI *NS_CallWindowProc) (WNDPROC, HWND, UINT, WPARAM, LPARAM);
 typedef LONG (WINAPI *NS_SetWindowLong) (HWND, int, LONG);
+typedef LONG (WINAPI *NS_GetWindowLong) (HWND, int);
 typedef LRESULT (WINAPI *NS_SendMessage) (HWND, UINT, WPARAM, LPARAM )  ;
 typedef LONG (WINAPI *NS_DispatchMessage) (CONST MSG *);
 typedef BOOL (WINAPI *NS_GetMessage) (LPMSG, HWND, UINT, UINT);
@@ -51,5 +56,7 @@ typedef int (WINAPI *NS_GetClassName) (HWND, LPWSTR, int);
 typedef HWND (WINAPI *NS_CreateWindowEx) 
           (DWORD, LPCWSTR, LPCWSTR, DWORD, int, int, int, int, HWND, HMENU, HINSTANCE, LPVOID);
 typedef ATOM (WINAPI *NS_RegisterClass) (CONST WNDCLASSW *); 
+typedef BOOL (WINAPI *NS_SHGetPathFromIDList) (LPCITEMIDLIST, LPWSTR);
+typedef LPITEMIDLIST (WINAPI *NS_SHBrowseForFolder) (LPBROWSEINFOW);
 
 #endif /* WindowAPI_h__ */
